syntax = "proto2";

import "scalapb/scalapb.proto";
import "model/platform.proto";
import "model/notificationType.proto";
import "google/protobuf/timestamp.proto";

package org.softnetwork.notification.model;

option (scalapb.options) = {
    single_file: true
    flat_package: true
    import: "app.softnetwork.persistence.message._"
    import: "app.softnetwork.persistence.model._"
    import: "app.softnetwork.serialization._"
    import: "app.softnetwork.protobuf.ScalaPBTypeMappers._"
    import: "app.softnetwork.notification.model._"
};

message From {
    option (scalapb.message).extends = "ProtobufDomainObject";
    required string value = 1;
    optional string alias = 2;
}

enum NotificationStatus {
    UnknownNotificationStatus = 0;
    Pending = 1;
    Sent = 2;
    Delivered = 3;
    Undelivered = 4;
    Rejected = 5;
}

message NotificationStatusResult {
    option (scalapb.message).extends = "ProtobufDomainObject";
    required string recipient = 1;
    required NotificationStatus status = 2;
    optional string error = 3;
}

message NotificationAck {
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "NotificationAckDecorator";
    optional string uuid = 1;
    repeated NotificationStatusResult results = 2;
    required google.protobuf.Timestamp date = 3 [(scalapb.field).type = "java.util.Date"];
}

message BasicDevice{
    option (scalapb.message).extends = "ProtobufDomainObject";
    required string regId = 1;
    required Platform platform = 2;
}

message Attachment{
    option (scalapb.message).extends = "ProtobufDomainObject";
    required string name = 1;
    required string path = 2;
    optional string description = 3;
}

enum MailType{
    UNKNOWN_MAIL_TYPE = 0;
    Plain = 1;
    Rich = 2;
    MultiPart = 3;
}

message Mail{
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "Notification";
    required string uuid = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.util.Date"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.util.Date"];
    required From from = 4;
    repeated string to = 5;
    repeated string cc = 6;
    repeated string bcc = 7;
    required string subject = 8;
    required string message = 9;
    optional string richMessage = 10;
    optional Attachment attachment = 11;
    required int32 maxTries = 13 [default = 1];
    required int32 nbTries = 14 [default = 0];
    optional google.protobuf.Timestamp deferred = 15 [(scalapb.field).type = "java.util.Date"];
    optional string ackUuid = 16;
    required NotificationStatus status = 17 [default = Pending];
    repeated NotificationStatusResult results = 18;
    required NotificationType type = 19 [default = MAIL_TYPE];
    repeated Attachment attachments = 20;
}

message SMS{
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "Notification";
    required string uuid = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.util.Date"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.util.Date"];
    required From from = 4;
    repeated string to = 5;
    required string subject = 8;
    required string message = 9;
    required int32 maxTries = 13 [default = 1];
    required int32 nbTries = 14 [default = 0];
    optional google.protobuf.Timestamp deferred = 15 [(scalapb.field).type = "java.util.Date"];
    optional string ackUuid = 16;
    required NotificationStatus status = 17 [default = Pending];
    repeated NotificationStatusResult results = 18;
    required NotificationType type = 19 [default = SMS_TYPE];
}

message Push{
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "Notification";
    required string uuid = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.util.Date"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.util.Date"];
    required From from = 4;
    repeated string to = 5;
    required string subject = 8;
    required string message = 9;
    required int32 maxTries = 13 [default = 1];
    required int32 nbTries = 14 [default = 0];
    optional google.protobuf.Timestamp deferred = 15 [(scalapb.field).type = "java.util.Date"];
    optional string ackUuid = 16;
    required NotificationStatus status = 17 [default = Pending];
    repeated NotificationStatusResult results = 18;
    required NotificationType type = 19 [default = PUSH_TYPE];
    repeated BasicDevice devices = 20;
    required string id = 21 [default = ""];
    required int32 badge = 22 [default = 0];
    optional string sound = 23;
}
